force-app/main/default/objects/Program_Offered__c/Program_Offered__c.object-meta.xml
<CustomObject>
    <label>Program Offered</label>
    <nameField>
        <label>Program Offered Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programs Offered</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>