force-app/main/default/objects/Program_Offered__c/fields/Area_of_Major__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Major__c</fullName>
    <label>Area of Major</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Administration of Justice</fullName>
            </value>
            <value>
                <fullName>American Indian Studies</fullName>
            </value>
            <value>
                <fullName>Anthropology</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Automotive Technology</fullName>
            </value>
            <value>
                <fullName>Aviation Technology</fullName>
            </value>
            <value>
                <fullName>Biochemistry</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Biotechnology</fullName>
            </value>
            <value>
                <fullName>Building and Construction Technology</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Clinical Research Coordinator</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>Computer Aided Drafting</fullName>
            </value>
            <value>
                <fullName>Computer Information Systems</fullName>
            </value>
            <value>
                <fullName>Culinary Arts</fullName>
            </value>
            <value>
                <fullName>Dental Studies</fullName>
            </value>
            <value>
                <fullName>Digital Arts</fullName>
            </value>
            <value>
                <fullName>Direct Care Professional</fullName>
            </value>
            <value>
                <fullName>Early Childhood Education</fullName>
            </value>
            <value>
                <fullName>Educational Technology</fullName>
            </value>
            <value>
                <fullName>Emergency Medical Technology</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Fashion Design</fullName>
            </value>
            <value>
                <fullName>Field Archeology</fullName>
            </value>
            <value>
                <fullName>Fine Arts</fullName>
            </value>
            <value>
                <fullName>Fire Science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>