force-app/main/default/objects/Program_Offered__c/fields/Area_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Area_of_Study__c</fullName>
    <label>Area of Study</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arts, Humanities &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Business Programs</fullName>
            </value>
            <value>
                <fullName>Computer Information Technology</fullName>
            </value>
            <value>
                <fullName>Education Programs</fullName>
            </value>
            <value>
                <fullName>General Studies or Undecided</fullName>
            </value>
            <value>
                <fullName>Health-Related Professions</fullName>
            </value>
            <value>
                <fullName>Public Safety Programs</fullName>
            </value>
            <value>
                <fullName>Science &amp; Engineering</fullName>
            </value>
            <value>
                <fullName>Social Sciences</fullName>
            </value>
            <value>
                <fullName>Trade Professions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>