force-app/main/default/objects/Program_Offered__c/fields/Program_Offered_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Offered_Name__c</fullName>
    <label>Program Offered Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>