force-app/main/default/objects/Program_Offered__c/fields/Selective_Admissions__c.field-meta.xml
<CustomField>
    <fullName>Selective_Admissions__c</fullName>
    <label>Selective Admissions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>